--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 APS_USERNAME=your_username_here
 APS_PASSWORD=your_password_here
+CHROMEDRIVER_BIN=/usr/bin/chromedriver
+CHROME_BIN=/usr/bin/chromium
