--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   aps-scraper:
@@ -8,3 +8,20 @@ services:
       - APS_USERNAME=${APS_USERNAME}
       - APS_PASSWORD=${APS_PASSWORD}
     restart: unless-stopped
+    depends_on:
+      - mosquitto  # Ensure broker is up before scraper tries to connect
+
+  mosquitto:
+    image: eclipse-mosquitto
+    container_name: mosquitto
+    restart: unless-stopped
+    ports:
+      - "1883:1883"     # MQTT port
+      - "9001:9001"     # WebSockets (optional)
+    volumes:
+      - mosquitto_config:/mosquitto/config
+      - mosquitto_data:/mosquitto/data
+
+volumes:
+  mosquitto_config:
+  mosquitto_data:
