--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,6 @@ APS_USERNAME=your_username_here
 APS_PASSWORD=your_password_here
 CHROMEDRIVER_BIN=/usr/bin/chromedriver
 CHROME_BIN=/usr/bin/chromium
-MQTT_HOST=mosquitto
+MQTT_HOST=host.docker.internal
 MQTT_PORT=1883
 MQTT_TOPIC=aps/energy
