--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     restart: unless-stopped
     network_mode: host
     volumes:
-      - /data/compose/13/mosquitto.conf:/mosquitto/config/mosquitto.conf
+      - /data/compose/13/mosquitto.conf:/mosquitto/config
       - mosquitto_data:/mosquitto/data
 
 volumes:
