--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,16 +5,14 @@ services:
     build: .
     container_name: aps-energy-scraper
     environment:
-      environment:
-      - TZ=America/Phoenix
-      - APS_USERNAME=${APS_USERNAME}
-      - APS_PASSWORD=${APS_PASSWORD}
-      - MQTT_HOST=mosquitto
-      - MQTT_PORT=1883
-      - MQTT_USERNAME=${MQTT_USERNAME}
-      - MQTT_PASSWORD=${MQTT_PASSWORD}
+      TZ: America/Phoenix
+      APS_USERNAME: ${APS_USERNAME}
+      APS_PASSWORD: ${APS_PASSWORD}
+      MQTT_HOST: mosquitto
+      MQTT_PORT: 1883
+      MQTT_USERNAME: ${MQTT_USERNAME}
+      MQTT_PASSWORD: ${MQTT_PASSWORD}
     working_dir: /app
-    
     entrypoint: >
       sh -c "sleep $(( ( RANDOM % 10 ) * 60 )) && python3 aps_scraper.py"
     restart: unless-stopped
